feat(1.1.0): Implement cross-version compatibility and major refactors
    Architecture & Compatibility:
    - Downgraded target Java version to Java 8 to ensure full backwards compatibility with legacy servers down to
  Minecraft 1.7.
    - Replaced Java 14+ syntax (records, switch expressions, pattern matching) with standard Java 8 code.
    - Introduced a dynamic `VersionHandler` interface to seamlessly manage version-specific API and NMS calls without
  crashing older server jars.
    - Implemented `ModernFeaturesHandler` (for 1.13+) and `LegacyFeaturesHandler` (for 1.12- via deep reflection) for
  ActionBars, Ping detection, and World Height boundaries.